yap-web/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yap-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yap-web
  template:
    metadata:
      labels:
        app: yap-web
    spec:
      containers:
        - name: yap-web
          image: yap-web
          ports:
            - containerPort: 80
