yap-web/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yap-web
spec:
  selector:
    app: yap-web
  ports:
    - port: 80
      targetPort: 80
