yap-web/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yap-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: yap-web.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yap-web
                port:
                  number: 80
